# goto-cloudserver-manager

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
config/: credentials.example.yaml  policies.yaml  providers.yaml  servers.yaml.example  tasks.yaml
core/: __init__.py  config_loader.py  dispatcher.py  policy_engine.py  report_generator.py  schema_compiler.py
databases/mysql/: apply_schema.sh  backup.sh  create_database.sql.j2  create_user.sql.j2  health_check.sql  install.sh  restore.sh
databases/postgresql/: apply_schema.sh  backup.sh  create_database.sql.j2  create_user.sql.j2  health_check.sql  install.sh  restore.sh
databases/redis/: backup.sh  health_check.sh  install.sh  restore.sh
databases/sqlserver/: apply_schema.ps1  backup.ps1  create_database.sql.j2  create_user.sql.j2  health_check.sql  install.ps1  restore.ps1
executor/: __init__.py  base.py  cloud_command_executor.py  local_executor.py  ssh_executor.py  winrm_executor.py
monitoring/node_exporter/: install_guide.md
monitoring/prometheus/: alerts.yaml
monitoring/windows_exporter/: config.yaml
os_adapters/linux/: check_server.sh  configure_firewall.sh  health_check.sh  install_mysql.sh  (+3 more)
providers/: __init__.py  base.py
reports/: backup_report.md.j2  daily_inspection_report.md.j2  database_report.md.j2  execution_report.md.j2  installation_report.md.j2  schema_report.md.j2  server_health_report.md.j2
tests/: test_config_loader.py  test_dispatcher.py  test_policy_engine.py  test_schema_compiler.py  test_security_group.py  test_tencent_tat.py
(+19 files in other folders)
